Added User updateAdmin operation and tests
