# src/main/resources/api.yml
@@ -201,6 +201,34 @@ paths:
           description: Bad request
         '404':
           description: Element not found
+  /users/{id}/admin:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+          format: int64
+    patch:
+      summary: Change the admin status of a user
+      description: Change the admin status of a user
+      operationId: changeAdminStatus
+      requestBody:
+        description: Update a user
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+        required: true
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: id not found
 components:
   schemas:
     Customer:
